verification/verification-ospdp/os-fluent-bit-daemonset-backup-20260411.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  annotations:
    deprecated.daemonset.template.generation: "3"
    meta.helm.sh/release-name: choreo-fluent-bit
    meta.helm.sh/release-namespace: choreo-observability
  creationTimestamp: "2026-04-02T21:01:59Z"
  generation: 3
  labels:
    app.kubernetes.io/instance: choreo-fluent-bit
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: fluent-bit
    app.kubernetes.io/version: 4.0.7
    helm.sh/chart: fluent-bit-0.51.0
    helm.toolkit.fluxcd.io/name: choreo-fluent-bit
    helm.toolkit.fluxcd.io/namespace: choreo-observability
  name: fluent-bit
  namespace: choreo-observability
  resourceVersion: "317612"
  uid: 2d6b2c48-8eff-4b67-a450-2dc9bf011116
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: choreo-fluent-bit
      app.kubernetes.io/name: fluent-bit
  template:
    metadata:
      annotations:
        checksum/config: 138310f2cb21a046b3101a6cf0f829c6bb79d6fa4e7c0df4e446685d06fbc9be
        checksum/luascripts: 43fd89b410990b2c7926ad7d2401f74c801123e131ed16bd37232a80ab8fbffb
        kubectl.kubernetes.io/restartedAt: "2026-04-03T07:32:37+05:30"
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: choreo-fluent-bit
        app.kubernetes.io/name: fluent-bit
    spec:
      containers:
      - args:
        - --workdir=/fluent-bit/etc
        - --config=/fluent-bit/etc/conf/fluent-bit.conf
        command:
        - /fluent-bit/bin/fluent-bit
        env:
        - name: BANDWIDTH_CONTROLLER_GROUP_KEY
          value: docker_id
        - name: BANDWIDTH_CONTROLLER_PERIOD_SECONDS
          value: "30"
        - name: BANDWIDTH_CONTROLLER_LIMIT_BYTES
          value: "70000000"
        - name: BANDWIDTH_CONTROLLER_ENABLE_DEBUG_LOGS
          value: "false"
        - name: OPENSEARCH_PASSWORD
          valueFrom:
            secretKeyRef:
              key: opensearch-fluent-bit-user-password
              name: fluent-bit
        image: choreoprivateacr.azurecr.io/fluent/fluent-bit:4.0.7@sha256:ddf332bc92921ee138b94698d36a1b6c7fd45959788a51ca460fc63e9ebee395
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: fluent-bit
        ports:
        - containerPort: 2021
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/v1/health
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 200m
            memory: 512Mi
          requests:
            cpu: 200m
            memory: 512Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 10000
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /fluent-bit/etc/conf
          name: config
        - mountPath: /fluent-bit/scripts
          name: luascripts
        - mountPath: /var/log
          name: varlog
        - mountPath: /var/lib/docker/containers
          name: varlibdockercontainers
          readOnly: true
        - mountPath: /etc/machine-id
          name: etcmachineid
          readOnly: true
        - mountPath: /mnt/csi-secret-store/fluent-bit-secrets
          name: csi-volume-fluent-bit-secrets
          readOnly: true
        - mountPath: /var/lib/fluent-bit/db
          name: db
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      imagePullSecrets:
      - name: choreo-image-pull-secret
      initContainers:
      - command:
        - sh
        - -c
        - chown -R 10000:10000 /var/lib/fluent-bit/db
        image: choreoprivateacr.azurecr.io/busybox@sha256:401719cc3ec67aedaedfed7fb304e97fb605bdcfae29972eaeb59a98708fe066
        imagePullPolicy: IfNotPresent
        name: set-volume-ownership
        resources:
          limits:
            cpu: 15m
            memory: 32Mi
          requests:
            cpu: 10m
            memory: 24Mi
        securityContext:
          capabilities:
            drop:
            - ALL
          privileged: true
          readOnlyRootFilesystem: true
          runAsUser: 0
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/fluent-bit/db
          name: db
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccount: fluent-bit
      serviceAccountName: fluent-bit
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: choreo-deployments
        operator: Equal
        value: userapps
      - effect: NoSchedule
        key: kubernetes.azure.com/scalesetpriority
        operator: Equal
        value: spot
      - effect: NoSchedule
        key: argo-build
        operator: Equal
        value: dedicated
      volumes:
      - configMap:
          defaultMode: 420
          name: fluent-bit
        name: config
      - configMap:
          defaultMode: 420
          name: fluent-bit-luascripts
        name: luascripts
      - hostPath:
          path: /var/log
          type: ""
        name: varlog
      - hostPath:
          path: /var/lib/docker/containers
          type: ""
        name: varlibdockercontainers
      - hostPath:
          path: /etc/machine-id
          type: File
        name: etcmachineid
      - csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: fluent-bit
        name: csi-volume-fluent-bit-secrets
      - hostPath:
          path: /var/lib/fluent-bit/db
          type: DirectoryOrCreate
        name: db
  updateStrategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
status:
  currentNumberScheduled: 9
  desiredNumberScheduled: 9
  numberAvailable: 9
  numberMisscheduled: 0
  numberReady: 9
  observedGeneration: 3
  updatedNumberScheduled: 9
